# tracevault

./: .env.example  .env.test  .gitignore  .gitmodules  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.enterprise  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  initial-idea.md  release-plz.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release-binaries.yml  release-plz.yml
action/: action.yml
crates/tracevault-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/tracevault-cli/src/: api_client.rs  config.rs  credentials.rs  lib.rs  main.rs
crates/tracevault-cli/src/commands/: check.rs  commit_push.rs  flush.rs  hook.rs  init.rs  login.rs  logout.rs  mod.rs  push.rs  stats.rs  stream.rs  sync.rs  verify.rs
crates/tracevault-cli/src/hooks/: claude_code.rs  cursor.rs  mod.rs
crates/tracevault-cli/tests/: e2e_test.rs  hook_test.rs  init_test.rs  stream_test.rs
crates/tracevault-core/: CHANGELOG.md  Cargo.toml  README.md
crates/tracevault-core/src/: attribution.rs  attribution_engine.rs  code_nav.rs  diff.rs  extensions.rs  gitai.rs  hooks.rs  lib.rs  permissions.rs  policy.rs  policy_engine.rs  redact.rs  session.rs  software.rs  streaming.rs  token_usage.rs  trace.rs
crates/tracevault-core/src/agent_adapter/: claude_code.rs  codex.rs  default.rs  mod.rs
crates/tracevault-core/tests/: agent_adapter_test.rs  attribution_engine_test.rs  diff_test.rs  gitai_test.rs  hooks_test.rs  policy_engine_test.rs  redact_test.rs  streaming_test.rs  trace_test.rs
crates/tracevault-server/: CHANGELOG.md  Cargo.toml  README.md
crates/tracevault-server/migrations/: 001_initial.sql  002_auth.sql  002_model_pricing.sql  003_pricing_settings.sql  003_transcript.sql  004_diff_data.sql  004_streaming_schema.sql  005_commit_message.sql  005_commits_sessions.sql  006_model_usage.sql  006_pricing_sync.sql  007_clear_canonical_pricing.sql  007_session_metrics.sql  008_fix_double_counted_input_tokens.sql  008_policy_enforcement.sql  009_compliance_audit_trail.sql  009_user_software_usage.sql  010_code_browser.sql  010_user_ai_tool_usage.sql  011_indexes_and_tool_field.sql  011_repo_deploy_keys.sql  012_materialized_views.sql  012_org_llm_settings.sql  013_org_invites.sql  013_story_references.sql  014_sealing_schema.sql  015_per_repo_webhook_secret.sql
crates/tracevault-server/src/: attribution.rs  audit.rs  auth.rs  branch_tracking.rs  config.rs  db.rs  encryption.rs  error.rs  extensions.rs  extractors.rs  lib.rs  llm.rs  main.rs  org_signing.rs  password_policy.rs  permissions.rs  pricing.rs  pricing_sync.rs  repo_manager.rs  signing.rs  story.rs
crates/tracevault-server/src/api/: analytics.rs  api_keys.rs  auth.rs  ci.rs  code.rs  commit_push.rs  compliance.rs  dashboard.rs  features.rs  github.rs  invites.rs  mod.rs  orgs.rs  policies.rs  pricing.rs  repos.rs  session_detail.rs  stream.rs  traces.rs  traces_ui.rs
crates/tracevault-server/src/repo/: analytics.rs  api_keys.rs  code_stories.rs  commits.rs  compliance.rs  events.rs  mod.rs  orgs.rs  pagination.rs  policies.rs  pricing.rs  repos.rs  sealing.rs  sessions.rs  users.rs
crates/tracevault-server/src/service/: attribution.rs  mod.rs  sealing.rs  stream.rs
crates/tracevault-server/tests/: invites_test.rs  repo_api_keys_test.rs  repo_commits_test.rs  repo_events_test.rs  repo_policies_test.rs  repo_pricing_test.rs  repo_repos_test.rs  repo_sessions_test.rs  repo_users_test.rs
crates/tracevault-server/tests/common/: mod.rs
docs/general/: compliance.md
docs/plans/: 2026-02-23-auth-and-web-ui-design.md  2026-02-23-auth-and-web-ui-implementation-plan.md  2026-02-23-tracevault-architecture-design.md  2026-02-23-tracevault-implementation-plan.md  2026-02-24-analytics-dashboard-design.md  2026-02-24-analytics-dashboard-implementation-plan.md  2026-02-24-diff-attribution-design.md  2026-02-24-diff-attribution-implementation-plan.md
enterprise/: Cargo.toml
enterprise/src/: lib.rs
homebrew/: README.md  tracevault.rb
scripts/: reseal-chain.py
web/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.css  app.d.ts  app.html
web/src/lib/: api.ts  build-info.ts
web/src/lib/components/: AgentBadge.svelte  DataTable.svelte  EmptyState.svelte  ErrorState.svelte  HelpTip.svelte  LoadingState.svelte  PageHeader.svelte  StatCard.svelte  StatusBadge.svelte  ToolBadge.svelte  analytics-filters.svelte  app-layout.svelte  app-sidebar.svelte  chart.svelte  enterprise-upgrade.svelte  password-strength.svelte  theme-toggle.svelte
web/src/lib/components/code/: BranchSelector.svelte  BreadcrumbNav.svelte  CodeView.svelte  FileTree.svelte  StoryPanel.svelte
web/src/lib/components/dashboard/: CacheSavingsCard.svelte  ComplianceCard.svelte  KpiCard.svelte  PeriodSwitcher.svelte  SessionQualityBar.svelte
web/src/lib/components/session-detail/: SessionCharts.svelte  SessionDetailPanel.svelte  SessionSummaryStats.svelte  SessionTranscript.svelte  TranscriptRecord.svelte
web/src/lib/components/sidebar/: SidebarFooter.svelte  SidebarNav.svelte  SidebarOrgSwitcher.svelte
web/src/lib/hooks/: use-dialog.svelte.ts  use-fetch.svelte.ts
web/src/lib/stores/: auth.ts  features.ts  org.ts  sidebar.ts
web/src/lib/types/: code.ts  common.ts  index.ts  sessions.ts
web/src/lib/utils/: colors.ts  date.ts  format.test.ts  format.ts  status.test.ts  status.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/analytics/: +layout.svelte  +page.svelte
web/src/routes/analytics/attribution/: +page.svelte
web/src/routes/analytics/authors/: +page.svelte
web/src/routes/auth/login/: +page.svelte
web/src/routes/compliance/: +page.svelte
web/src/routes/health/: +server.ts
web/src/routes/orgs/: +page.svelte
web/src/routes/repos/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/traces/: +layout.svelte  +page.svelte
(+60 files in other folders)
