[package]
name = "tracevault-enterprise"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false

[dependencies]
tracevault-core = { path = "../crates/tracevault-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
