[package]
name = "tracevault-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "tracevault_cli"
path = "src/lib.rs"

[[bin]]
name = "tracevault"
path = "src/main.rs"

[dependencies]
tracevault-core = { path = "../tracevault-core" }
clap = { version = "4", features = ["derive"] }
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
