[package]
name = "tracevault-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "tracevault_cli"
path = "src/lib.rs"

[[bin]]
name = "tracevault"
path = "src/main.rs"

[dependencies]
tracevault-core = { path = "../tracevault-core" }
clap = { version = "4", features = ["derive"] }
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
