[package]
name = "tracevault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for TraceVault - AI code tracing and attribution"
readme = "README.md"
keywords = ["tracing", "attribution", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "tracevault_cli"
path = "src/lib.rs"

[[bin]]
name = "tracevault"
path = "src/main.rs"

[dependencies]
tracevault-core = { path = "../tracevault-core", version = "0.2" }
clap = { version = "4", features = ["derive"] }
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", features = ["json"] }
open = "5"
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
