[package]
name = "tracevault-server"
version.workspace = true
edition.workspace = true

[dependencies]
tracevault-core = { path = "../tracevault-core" }
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
