[package]
name = "tracevault-server"
version.workspace = true
edition.workspace = true

[dependencies]
tracevault-core = { path = "../tracevault-core" }
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
http = "1"
